# flask_webauthn

./: .env.example  LICENSE  README.md  main.py  openapi.json  pyproject.toml
src/: __init__.py
src/config/: env.py
src/controllers/: __init__.py  passkey_controller.py
src/models/: __init__.py  credential_entity.py  passkey_reg_verif_model.py  user_entity.py
src/routes/: __init__.py  main_bp.py  passkey_bp.py
src/services/: __init__.py  passkey_service.py
templates/: index.html
